# template-rs

./: Cargo.toml  README.md  cargo-generate.toml  config.yaml  docker-compose.yaml  justfile  otel-collector-config.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml
config/: default.yaml
src/: config.rs  error.rs  infra.rs  lib.rs  main.rs  telemetry.rs
src/infra/: api.rs
