[package]
name          = "{{ project-name }}"
version       = "0.0.1"
description   = "{{ project-name }}"
edition       = "2021"
authors       = [ "{{ authors }}" ]
license-file  = "LICENSE"
readme        = "README.md"
homepage      = "https://github.com/{{ github_id }}/{{ project-name }}"
repository    = "https://github.com/{{ github_id }}/{{ project-name }}"
documentation = "https://github.com/{{ github_id }}/{{ project-name }}"

[dependencies]
anyhow                = { version = "1.0" }
figment               = { version = "0.10", features = [ "env", "yaml" ] }
opentelemetry         = { version = "0.27" }
opentelemetry_sdk     = { version = "0.27", features = [ "rt-tokio" ] }
opentelemetry-otlp    = { version = "0.27", default-features = false, features = [ "grpc-tonic", "trace" ] }
serde                 = { version = "1.0", features = [ "derive" ] }
serde_json            = { version = "1.0" }
thiserror             = { version = "2.0" }
time                  = { version = "0.3", features = [ "formatting" ] }
tokio                 = { version = "1", features = [ "macros", "rt-multi-thread" ] }
tracing               = { version = "0.1" }
tracing-opentelemetry = { version = "0.28" }
tracing-subscriber    = { version = "0.3", features = [ "env-filter", "json" ] }

[dev-dependencies]
assert_matches = { version = "1.5" }
