[package]
name          = "{{ project-name }}"
version       = "0.0.1"
description   = "{{ project-name }}"
edition       = "2024"
authors       = [ "{{ authors }}" ]
license-file  = "LICENSE"
readme        = "README.md"
homepage      = "https://github.com/{{ github_id }}/{{ project-name }}"
repository    = "https://github.com/{{ github_id }}/{{ project-name }}"
documentation = "https://github.com/{{ github_id }}/{{ project-name }}"

[dependencies]
anyhow                 = { version = "1.0" }
axum                   = { version = "0.8", features = [ "http2", "json" ] }
fastrace               = { version = "0.7", features = [ "enable" ] }
fastrace-axum          = { version = "0.1" }
fastrace-opentelemetry = { version = "0.15" }
figment                = { version = "0.10", features = [ "env", "yaml" ] }
log                    = { version = "0.4", features = [ "kv_std" ] }
logforth               = { version = "0.29", features = [ "append-fastrace", "diagnostic-fastrace", "starter-log" ] }
opentelemetry          = { version = "0.31" }
opentelemetry_sdk      = { version = "0.31" }
opentelemetry-otlp     = { version = "0.31", features = [ "grpc-tonic" ] }
serde                  = { version = "1.0", features = [ "derive" ] }
serde_json             = { version = "1.0" }
thiserror              = { version = "2.0" }
tokio                  = { version = "1", features = [ "macros", "rt-multi-thread", "signal" ] }
tower                  = { version = "0.5" }

[dev-dependencies]
assert_matches = { version = "1.5" }
