[package]
name          = "{{ project-name }}"
description   = "{{ project-name }}"
version       = "0.0.1"
edition       = "2024"
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/{{ github_id }}/{{ project-name }}"
repository    = "https://github.com/{{ github_id }}/{{ project-name }}"
documentation = "https://github.com/{{ github_id }}/{{ project-name }}"
publish       = false

[dependencies]
anyhow                 = { version = "1.0" }
{%- if tracing %}
fastrace               = { version = "0.7", features = [ "enable" ] }
fastrace-opentelemetry = { version = "0.18" }
{%- endif %}
{%- if config %}
configured             = { version = "0.9" }
{%- endif %}
log                    = { version = "0.4", features = [ "kv_std" ] }
logforth               = { version = "0.30", features = [ {% if tracing %}"append-fastrace", "diagnostic-fastrace", {% endif %}"starter-log" ] }
{%- if tracing %}
opentelemetry          = { version = "0.32" }
opentelemetry_sdk      = { version = "0.32" }
opentelemetry-otlp     = { version = "0.32", features = [ "grpc-tonic" ] }
{%- endif %}
{%- if config or tracing %}
serde                  = { version = "1.0", features = [ "derive" ] }
{%- endif %}
tokio                  = { version = "1", features = [ "macros", "rt-multi-thread" ] }
